# pythujs

./: .gitignore  LICENSE  README.md  pyproject.toml  pythujs.ts  rudoc.md
pythujs/: __init__.py  pythujs.js
